fixed z-index on button stop disco + changes on one header

--- a/portfolio-website/style.css
+++ b/portfolio-website/style.css
@@ -81,6 +81,7 @@ button:hover {
 #portfolio>.button-toggle-disco {
 	position: fixed;
 	inset: 1rem 1rem auto auto;
+	z-index: 1;
 }
 
 section {
